--- a/list.html
+++ b/list.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- TODO: langがない @shin -->
+<!-- TODO: langを台湾へ変更（全ページ） @shin -->
 <html>
     <head>
         <meta charset="UTF-8"/>
