--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/style.css"/>
   </head>
   <body id="pagetop">
-    <!-- TODO:コードエラーがある @shin -->
+    <!-- TODO:コードエラーがある なおってない @shin -->
     <header class="header">
         <!-- Middle -->
         <div class="header__middle">
