--- a/mypage/editskill.html
+++ b/mypage/editskill.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body class="lower-index" id="pagetop">
+    <!-- TODO: ヘッダーがdivタグたりない @shin -->
     <header class="header">
         <!-- Middle -->
         <div class="header__middle">
@@ -34,6 +35,7 @@
           <div class="job-categories1">
             <div class="job-categories1-title">職業類別1</div>
             <div class="job-categories1-checkbox">
+              <!-- TODO: idが重複している。利用しない場合は記述しないように @shin -->
               <label><input class="job-checkbox" type="radio" name="skill[0]" id=""><span>建築</span></label>
               <label><input class="job-checkbox" type="radio" name="skill[0]" id=""><span>室内設計</span></label>
               <label><input class="job-checkbox" type="radio" name="skill[0]" id=""><span>相關技師｜顧問</span></label>
@@ -218,7 +220,9 @@
             </table>
           </div>
           <div class="info-submit">
+            <!-- TODO: 無効なリンク @shin -->
             <button type="submit" name=""><a href="./step4.html">送出</a></button>
+            <!-- TODO: 無効なリンク @shin -->
             <button type="button" class="backtoprevious"><a href="./step2.html" class="backtoprevious">上一頁</a></button>
           </div>
         </form>
