--- a/password/email.html
+++ b/password/email.html
@@ -32,6 +32,7 @@
                 </div>
                 <table class="confirm-body-input">
                     <tr>
+                        <!-- TODO: 無効なlabel動作を確認すること @shin -->
                       <td><label for="c-mail">電子郵件信箱</label></td>
                       <td><input type="email" name="c-mail"></td>
                     </tr>
