--- a/reg/step3.html
+++ b/reg/step3.html
@@ -68,6 +68,8 @@
                     <div class="work-skill__evaluation">
                       <ol class="c-evaluation">
                         <li class="c-evaluation__item">
+                          <!-- TODO: idの番号に[]はつけない-で管理する @shin -->
+                          <!-- TODO: 無効なlabel動作を確認すること（複数あり） @shin -->
                           <input type="radio" name="autocad_skill[0]" id="evaluation-c[0]" required>
                           <label for="evaluation-c" class="c-evaluation__rank">C</label>
                         </li>
