--- a/userlogin.html
+++ b/userlogin.html
@@ -35,10 +35,12 @@
         <div class="login-form__title">會員登入</div>
         <table class="login-form__form">
           <tr>
+            <!-- TODO: 無効なlabel動作を確認すること @shin -->
             <td><label for="user_id">ID帳號</label></td>
             <td><input type="text" name="user_id"></td>
           </tr>
           <tr>
+            <!-- TODO: 無効なlabel動作を確認すること @shin -->
             <td><label for="password">密碼</label></td>
             <td><input type="password" name="password"></td>
           </tr>
