update: JSのファイル名変更　それに伴う読み込みファイルの変更

--- a/index.html
+++ b/index.html
@@ -1851,8 +1851,9 @@
     <!-- ↓Home only -->
     <!-- TODO:ライブラリをインストールして利用する形にする -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/home-swiper.js"></script>
     <script src="./js/home.js"></script>
+    <script src="./js/script.js"></script>
     <!-- ↑Home only -->
   </body>
 </html>
