--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -83,7 +83,7 @@
             <button type="submit"><a href="./step2.html"></a>修改</button>
           </div>
           <div class="backtologin">
-            如果您已是A++會員請<a href="../userlogin.html">登⼊</a>
+            如果您已是A++會員請<a href="../user/login.html">登⼊</a>
           </div>
         </form>
       </div>
