fix: リンクが不必要な部分の排除

--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -79,8 +79,7 @@
             </tr>
           </table>
           <div class="submit-button">
-            <!-- TODO: リンクが切れてる -->
-            <button type="submit"><a href="./step2.html"></a>修改</button>
+            <button type="submit">修改</button>
           </div>
           <div class="backtologin">
             如果您已是A++會員請<a href="../user/login.html">登⼊</a>
