--- a/reg/step3.html
+++ b/reg/step3.html
@@ -41,12 +41,12 @@
           <div class="job-categories1">
             <div class="job-categories1-title">職業類別1</div>
             <div class="job-categories1-checkbox">
-              <label><input class="job-checkbox" type="radio" name="skill[0]" id="1st-skill[0]"><span>建築</span></label>
-              <label><input class="job-checkbox" type="radio" name="skill[0]" id="2nd-skill[0]"><span>室内設計</span></label>
-              <label><input class="job-checkbox" type="radio" name="skill[0]" id="3rd-skill[0]"><span>相關技師｜顧問</span></label>
-              <label><input class="job-checkbox" type="radio" name="skill[0]" id="4th-skill[0]"><span>景觀｜規劃｜土地開發</span></label><br>
-              <label><input class="job-checkbox" type="radio" name="skill[0]" id="5th-skill[0]"><span>工程｜材料｜設備｜廠商｜運輸</span></label>
-              <label><input class="job-checkbox" type="radio" name="skill[0]" id="6th-skill[0]"><span>建築文化資產｜教育｜出版媒體</span></label>
+              <label><input class="job-checkbox" type="radio" name="skill[0]" id="1st-skill-0"><span>建築</span></label>
+              <label><input class="job-checkbox" type="radio" name="skill[0]" id="2nd-skill-0"><span>室内設計</span></label>
+              <label><input class="job-checkbox" type="radio" name="skill[0]" id="3rd-skill-0"><span>相關技師｜顧問</span></label>
+              <label><input class="job-checkbox" type="radio" name="skill[0]" id="4th-skill-0"><span>景觀｜規劃｜土地開發</span></label><br>
+              <label><input class="job-checkbox" type="radio" name="skill[0]" id="5th-skill-0"><span>工程｜材料｜設備｜廠商｜運輸</span></label>
+              <label><input class="job-checkbox" type="radio" name="skill[0]" id="6th-skill-0"><span>建築文化資產｜教育｜出版媒體</span></label>
             </div>
             <div class="work-skill sp-tgl-wrap">
               <h3 class="works__section-title tgl-switch">
@@ -64,31 +64,29 @@
                     <div class="work-skill__evaluation">
                       <ol class="c-evaluation">
                         <li class="c-evaluation__item">
-                          <!-- TODO: idの番号に[]はつけない-で管理する @shin -->
-                          <!-- TODO: 無効なlabel動作を確認すること（複数あり） @shin -->
-                          <input type="radio" name="autocad_skill[0]" id="evaluation-c[0]" required>
-                          <label for="evaluation-c" class="c-evaluation__rank">C</label>
+                          <input type="radio" name="autocad_skill[0]" id="evaluation-c-0" required>
+                          <label for="evaluation-c-0" class="c-evaluation__rank">C</label>
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="autocad_skill[0]" id="evaluation-b[0]">
-                          <label for="evaluation-b" class="c-evaluation__rank">B</label>
+                          <input type="radio" name="autocad_skill[0]" id="evaluation-b-0">
+                          <label for="evaluation-b-0" class="c-evaluation__rank">B</label>
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="autocad_skill[0]" id="evaluation-bb[0]">
-                          <label for="evaluation-bb" class="c-evaluation__rank">B+</label>
+                          <input type="radio" name="autocad_skill[0]" id="evaluation-bb-0">
+                          <label for="evaluation-bb-0" class="c-evaluation__rank">B+</label>
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="autocad_skill[0]" id="evaluation-a[0]">
-                          <label for="evaluation-a" class="c-evaluation__rank">A</label>
+                          <input type="radio" name="autocad_skill[0]" id="evaluation-a-0">
+                          <label for="evaluation-a-0" class="c-evaluation__rank">A</label>
 
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="autocad_skill[0]" id="evaluation-aa[0]">
-                          <label for="evaluation-aa" class="c-evaluation__rank">A+</label>
+                          <input type="radio" name="autocad_skill[0]" id="evaluation-aa-0">
+                          <label for="evaluation-aa-0" class="c-evaluation__rank">A+</label>
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="autocad_skill[0]" id="evaluation-aaa[0]">
-                          <label for="evaluation-aaa" class="c-evaluation__rank">A++</label>
+                          <input type="radio" name="autocad_skill[0]" id="evaluation-aaa-0">
+                          <label for="evaluation-aaa-0" class="c-evaluation__rank">A++</label>
                         </li>
                       </ol>
                     </div>
@@ -99,29 +97,29 @@
                     <div class="work-skill__evaluation">
                       <ol class="c-evaluation">
                         <li class="c-evaluation__item">
-                          <input type="radio" name="drawing_skill[0]" id="evaluation-c2[0]" required>
-                          <label for="evaluation-c2" class="c-evaluation__rank">C</label>
+                          <input type="radio" name="drawing_skill[0]" id="evaluation-c2-0" required>
+                          <label for="evaluation-c2-0" class="c-evaluation__rank">C</label>
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="drawing_skill[0]" id="evaluation-b2[0]">
-                          <label for="evaluation-b2" class="c-evaluation__rank">B</label>
+                          <input type="radio" name="drawing_skill[0]" id="evaluation-b2-0">
+                          <label for="evaluation-b2-0" class="c-evaluation__rank">B</label>
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="drawing_skill[0]" id="evaluation-bb2[0]">
-                          <label for="evaluation-bb2" class="c-evaluation__rank">B+</label>
+                          <input type="radio" name="drawing_skill[0]" id="evaluation-bb2-0">
+                          <label for="evaluation-bb2-0" class="c-evaluation__rank">B+</label>
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="drawing_skill[0]" id="evaluation-a2[0]">
-                          <label for="evaluation-a2" class="c-evaluation__rank">A</label>
+                          <input type="radio" name="drawing_skill[0]" id="evaluation-a2-0">
+                          <label for="evaluation-a2-0" class="c-evaluation__rank">A</label>
 
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="drawing_skill[0]" id="evaluation-aa2[0]">
-                          <label for="evaluation-aa2" class="c-evaluation__rank">A+</label>
+                          <input type="radio" name="drawing_skill[0]" id="evaluation-aa2-0">
+                          <label for="evaluation-aa2-0" class="c-evaluation__rank">A+</label>
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="drawing_skill[0]" id="evaluation-aaa2[0]">
-                          <label for="evaluation-aaa2" class="c-evaluation__rank">A++</label>
+                          <input type="radio" name="drawing_skill[0]" id="evaluation-aaa2-0">
+                          <label for="evaluation-aaa2-0" class="c-evaluation__rank">A++</label>
                         </li>
                       </ol>
                     </div>
@@ -131,29 +129,29 @@
                     <div class="work-skill__evaluation">
                       <ol class="c-evaluation">
                         <li class="c-evaluation__item">
-                          <input type="radio" name="manege_skill[0]" id="evaluation-c3[0]" required>
-                          <label for="evaluation-c3" class="c-evaluation__rank">C</label>
+                          <input type="radio" name="manege_skill[0]" id="evaluation-c3-0" required>
+                          <label for="evaluation-c3-0" class="c-evaluation__rank">C</label>
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="manege_skill[0]" id="evaluation-b3[0]">
-                          <label for="evaluation-b3" class="c-evaluation__rank">B</label>
+                          <input type="radio" name="manege_skill[0]" id="evaluation-b3-0">
+                          <label for="evaluation-b3-0" class="c-evaluation__rank">B</label>
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="manege_skill[0]" id="evaluation-bb3[0]">
-                          <label for="evaluation-bb3" class="c-evaluation__rank">B+</label>
+                          <input type="radio" name="manege_skill[0]" id="evaluation-bb3-0">
+                          <label for="evaluation-bb3-0" class="c-evaluation__rank">B+</label>
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="manege_skill[0]" id="evaluation-a3[0]">
-                          <label for="evaluation-a3" class="c-evaluation__rank">A</label>
+                          <input type="radio" name="manege_skill[0]" id="evaluation-a3-0">
+                          <label for="evaluation-a3-0" class="c-evaluation__rank">A</label>
 
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="manege_skill[0]" id="evaluation-aa3[0]">
-                          <label for="evaluation-aa3" class="c-evaluation__rank">A+</label>
+                          <input type="radio" name="manege_skill[0]" id="evaluation-aa3-0">
+                          <label for="evaluation-aa3-0" class="c-evaluation__rank">A+</label>
                         </li>
                         <li class="c-evaluation__item">
-                          <input type="radio" name="manege_skill[0]" id="evaluation-aaa3[0]">
-                          <label for="evaluation-aaa3" class="c-evaluation__rank">A++</label>
+                          <input type="radio" name="manege_skill[0]" id="evaluation-aaa3-0">
+                          <label for="evaluation-aaa3-0" class="c-evaluation__rank">A++</label>
                         </li>
                       </ol>
                     </div>
