fix: editページのリンク有効化

--- a/mypage/editresume.html
+++ b/mypage/editresume.html
@@ -117,10 +117,8 @@
             <div class="hobby-bottom"><textarea name="" placeholder="素描, 建築素描, 測繪, 旅行" required></textarea></div>
           </div>
           <div class="info-submit">
-            <!-- TODO: 無効なリンク @shin -->
-            <button type="submit" name=""><a href="./step3.html">送出</a></button>
-            <!-- TODO: 無効なリンク @shin -->
-            <button type="button" class="backtoprevious"><a href="./step1.html" >上一頁</a></button>
+            <button type="submit" name=""><a href="../step3.html">送出</a></button>
+            <button type="button" class="backtoprevious"><a href="../step1.html" >上一頁</a></button>
           </div>
         </form>
       </div>
