--- a/mypage/editskill.html
+++ b/mypage/editskill.html
@@ -216,10 +216,8 @@
             </table>
           </div>
           <div class="info-submit">
-            <!-- TODO: 無効なリンク @shin -->
-            <button type="submit" name=""><a href="./step4.html">送出</a></button>
-            <!-- TODO: 無効なリンク @shin -->
-            <button type="button" class="backtoprevious"><a href="./step2.html" class="backtoprevious">上一頁</a></button>
+            <button type="submit" name=""><a href="../step4.html">送出</a></button>
+            <button type="button" class="backtoprevious"><a href="../step2.html" class="backtoprevious">上一頁</a></button>
           </div>
         </form>
       </div>
