update: imgタグにsrc属性追加

--- a/reg/step2.html
+++ b/reg/step2.html
@@ -43,8 +43,7 @@
             <div class="personal-info-contents">
               <div class="personal-info-contents__image">
                 <div class="image-area">
-                  <!-- TODO: 空でもsrc属性が必要 @shin -->
-                  <img class="preview" id="preview" alt="+">
+                  <img src="" class="preview" id="preview" alt="+">
                   <input type="file" name="profile_img" required accept="image/*" onchange="previewImage(this)">
                 </div>
                 
