--- a/mypage/editresume.html
+++ b/mypage/editresume.html
@@ -44,8 +44,7 @@
             <div class="personal-info-contents">
               <div class="personal-info-contents__image">
                 <div class="image-area">
-                  <!-- TODO: src属性がない -->
-                  <img class="preview" id="preview" alt="preview">
+                  <img src="" class="preview" id="preview" alt="preview">
                   <input type="file" name="profile_img" required accept="image/*" onchange="previewImage(this)">
                 </div>
                 
