update: imgのファイル名変更、不必要なファイル削除

--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -31,7 +31,7 @@
       <!-- yellow-box -->
       <div class="attention">
         <div class="yellow-box">
-          <img src="../img/icon/attention2.png" alt="attention">
+          <img src="../img/attention_yellow.png" alt="attention">
           免費註冊成為會員僅需在網站上填寫相關資料, Ａ＋＋不會主動以電話面試或聯繫。
         </div>
       </div>
