--- a/mypage/editresume.html
+++ b/mypage/editresume.html
@@ -102,8 +102,8 @@
           <div class="license">
             <div class="license-top">
               專業證照｜獲獎紀錄｜相關社團參與
-              <button type="button" value="フォーム追加" onclick="addForm()">
-                <img src="../img/icon/addformDark.png" alt="pen">+
+              <button type="button" onclick="addForm()">
+                <img src="../img/add_form_dark.png" alt="pen">+
               </button>
             </div>           
             <div class="license-contents" id="form_area">
