--- a/reg/step3.html
+++ b/reg/step3.html
@@ -179,7 +179,7 @@
 
           <div class="rank-base" id="rank-base">
             <div class="rank-base-title">
-              <img src="../img/icon/salesAnalysis.png" alt="">評分標準
+              <img src="../img/sales_analysis_icon.png" alt="">評分標準
             </div>
             <table class="rankBase">
               <tr>
