--- a/user/login.html
+++ b/user/login.html
@@ -23,7 +23,7 @@
     </header>
     <!-- middle logo -->
     <div class="m-logo"> 
-      <img src="../img/logoflipcolor.svg" alt="A++">
+      <img src="../img/logo_red.svg" alt="A++">
     </div>
     <!-- login form -->
     <form>
@@ -44,7 +44,7 @@
         <div class="c-button-white">
           <button class="c-button__link" type="submit">
             <span class="c-button__icon">
-              <img src="../img/icon/loginicon.png" alt="login" />
+              <img src="../img/login_icon_white.png" alt="login" />
             </span>
             登入
           </button>
