update: htmlのlangを台湾(zh-TW)に変更

--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -3,7 +3,7 @@
 <!-- TODO:全ページのfaviconの設定 @shin -->
 <!-- TODO:swiperのcssを読み込む必要性はあるのか？(全ページ) @shin -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="UTF-8" />
