--- a/user/login.html
+++ b/user/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="UTF-8" />
@@ -34,8 +34,8 @@
             <table class="login-form__form">
                 <tr>
                     <!-- TODO: 無効なlabel動作を確認すること @shin -->
-                    <td><label for="user_id">ID帳號</label></td>
-                    <td><input type="text" name="user_id"></td>
+                    <td><label for="original_id">ID帳號</label></td>
+                    <td><input type="text" name="original_id"></td>
                 </tr>
                 <tr>
                     <!-- TODO: 無効なlabel動作を確認すること @shin -->
