--- a/list.html
+++ b/list.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<!-- TODO: langがない @shin -->
-<!-- TODO: langを台湾へ変更（全ページ） @shin -->
-<html>
+<html lang="zh-TW">
     <head>
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
