update: imgファイル名のスペルミス修正

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="c-button -orange">
                         <a href="" class="c-button__link">
                             <span class="c-button__icon">
-                                <img src="./img/icon/myPageWhite.png" alt="">
+                                <img src="./img/my_page_icon.png" alt="">
                             </span>
                             我的頁面
                         </a>
@@ -973,7 +973,7 @@
                             <li class="outstanding-companies__item">
                                 <div class="outstanding-companies__logo">
                                     <!-- TODO:スペルみす ここから多数 @shin -->
-                                    <img src="./img/home/companie-logo/logo1.jpg" alt="" />
+                                    <img src="./img/home/companies-logo/logo1.jpg" alt="" />
                                 </div>
                                 <p class="outstanding-companies__text">
                                     遠雄集團 <br />
@@ -982,7 +982,7 @@
                             </li>
                             <li class="outstanding-companies__item">
                                 <div class="outstanding-companies__logo">
-                                    <img src="./img/home/companie-logo/logo2.jpg" alt="" />
+                                    <img src="./img/home/companies-logo/logo2.jpg" alt="" />
                                 </div>
                                 <p class="outstanding-companies__text">
                                     國泰建設 <br />
@@ -991,7 +991,7 @@
                             </li>
                             <li class="outstanding-companies__item">
                                 <div class="outstanding-companies__logo">
-                                    <img src="./img/home/companie-logo/logo3.jpg" alt="" />
+                                    <img src="./img/home/companies-logo/logo3.jpg" alt="" />
                                 </div>
                                 <p class="outstanding-companies__text">
                                     達欣工程 <br />
@@ -1000,7 +1000,7 @@
                             </li>
                             <li class="outstanding-companies__item">
                                 <div class="outstanding-companies__logo">
-                                    <img src="./img/home/companie-logo/logo4.jpg" alt="" />
+                                    <img src="./img/home/companies-logo/logo4.jpg" alt="" />
                                 </div>
                                 <p class="outstanding-companies__text">
                                     忠泰建設<br />
@@ -1009,7 +1009,7 @@
                             </li>
                             <li class="outstanding-companies__item">
                                 <div class="outstanding-companies__logo">
-                                    <img src="./img/home/companie-logo/logo5.jpg" alt="" />
+                                    <img src="./img/home/companies-logo/logo5.jpg" alt="" />
                                 </div>
                                 <p class="outstanding-companies__text">
                                     許黃勝兆建築師事務<br />
@@ -1018,7 +1018,7 @@
                             </li>
                             <li class="outstanding-companies__item">
                                 <div class="outstanding-companies__logo">
-                                    <img src="./img/home/companie-logo/logo6.jpg" alt="" />
+                                    <img src="./img/home/companies-logo/logo6.jpg" alt="" />
                                 </div>
                                 <p class="outstanding-companies__text">
                                     元創建築｜奧林國際<br />
@@ -1027,7 +1027,7 @@
                             </li>
                             <li class="outstanding-companies__item">
                                 <div class="outstanding-companies__logo">
-                                    <img src="./img/home/companie-logo/logo7.jpg" alt="" />
+                                    <img src="./img/home/companies-logo/logo7.jpg" alt="" />
                                 </div>
                                 <p class="outstanding-companies__text">
                                     李祖源聯合建築師<br />
@@ -1036,7 +1036,7 @@
                             </li>
                             <li class="outstanding-companies__item">
                                 <div class="outstanding-companies__logo">
-                                    <img src="./img/home/companie-logo/logo8.jpg" alt="" />
+                                    <img src="./img/home/companies-logo/logo8.jpg" alt="" />
                                 </div>
                                 <p class="outstanding-companies__text">
                                     匯喬設計<br />
@@ -1045,7 +1045,7 @@
                             </li>
                             <li class="outstanding-companies__item">
                                 <div class="outstanding-companies__logo">
-                                    <img src="./img/home/companie-logo/logo9.jpg" alt="" />
+                                    <img src="./img/home/companies-logo/logo9.jpg" alt="" />
                                 </div>
                                 <p class="outstanding-companies__text">
                                     冠軍磁磚台北旗艦店 銷售人員數名
@@ -1053,19 +1053,19 @@
                             </li>
                             <li class="outstanding-companies__item">
                                 <div class="outstanding-companies__logo">
-                                    <img src="./img/home/companie-logo/logo10.jpg" alt="" />
+                                    <img src="./img/home/companies-logo/logo10.jpg" alt="" />
                                 </div>
                                 <p class="outstanding-companies__text">徵中部地區安裝師傅</p>
                             </li>
                             <li class="outstanding-companies__item">
                                 <div class="outstanding-companies__logo">
-                                    <img src="./img/home/companie-logo/logo11.jpg" alt="" />
+                                    <img src="./img/home/companies-logo/logo11.jpg" alt="" />
                                 </div>
                                 <p class="outstanding-companies__text">誠徵合作廠商</p>
                             </li>
                             <li class="outstanding-companies__item">
                                 <div class="outstanding-companies__logo">
-                                    <img src="./img/home/companie-logo/logo12.jpg" alt="" />
+                                    <img src="./img/home/companies-logo/logo12.jpg" alt="" />
                                 </div>
                                 <p class="outstanding-companies__text">
                                     柏正廚具高雄旗艦店<br />
