update: idのid属性変更

--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -1,7 +1,6 @@
 <!-- TODO:１つ１つの要素について理解する必要がある。このページに不要なものが他にもいくつかあるように思う。また、パスワードは必須である必要性はあるのか？ @shin -->
 <!-- TODO:コンソールエラーの解消 @shin -->
 <!-- TODO:全ページのfaviconの設定 @shin -->
-<!-- TODO:swiperのcssを読み込む必要性はあるのか？(全ページ) @shin -->
 <!DOCTYPE html>
 <html lang="zh-TW">
 
@@ -44,8 +43,8 @@
             <form class="form-account-info" action="" method="post" enctype="multipart/form-data">
                 <table class="account-info-input">
                     <tr>
-                        <td class="icon-required"><label for="user-id">ID帳號</label></td>
-                        <td><input type="text" name="user_id" id="user-id" required></td>
+                        <td class="icon-required"><label for="original-id">ID帳號</label></td>
+                        <td><input type="text" name="user_id" id="original-id" required></td>
                     </tr>
                     <tr>
                         <td class="icon-required"><label for="password">密碼</label></td>
