update: ユーザーIDのid属性再度変更&ログインのlabel動作有効化

--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -44,7 +44,7 @@
                 <table class="account-info-input">
                     <tr>
                         <td class="icon-required"><label for="original-id">ID帳號</label></td>
-                        <td><input type="text" name="user_id" id="original-id" required></td>
+                        <td><input type="text" name="original_id" id="original-id" required></td>
                     </tr>
                     <tr>
                         <td class="icon-required"><label for="password">密碼</label></td>
