--- a/user/login.html
+++ b/user/login.html
@@ -33,14 +33,12 @@
             <div class="login-form__title">會員登入</div>
             <table class="login-form__form">
                 <tr>
-                    <!-- TODO: 無効なlabel動作を確認すること @shin -->
-                    <td><label for="original_id">ID帳號</label></td>
-                    <td><input type="text" name="original_id"></td>
+                    <td><label for="original-id">ID帳號</label></td>
+                    <td><input type="text" name="original_id" id="original-id"></td>
                 </tr>
                 <tr>
-                    <!-- TODO: 無効なlabel動作を確認すること @shin -->
                     <td><label for="password">密碼</label></td>
-                    <td><input type="password" name="password"></td>
+                    <td><input type="password" name="password" id="password"></td>
                 </tr>
             </table>
             <div class="c-button-white">
