fix: imgのファイル名変更に伴う、登録完了ページのロゴ修正

--- a/reg/step4.html
+++ b/reg/step4.html
@@ -24,7 +24,7 @@
         </div>
     </header>
     <div class="m2-logo">
-        <img src="../img/logoflipcolor.svg" alt="">
+        <img src="../img/logo_red.svg" alt="">
     </div>
     <div class="login-complete">
         <p>恭喜你!</p>
