update: 全ページにFavicon実装

--- a/list.html
+++ b/list.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>A++ All Pages Links</title>
         <link rel="stylesheet" href="css/style.css" />
+        <!-- Favicon -->
+        <link rel="icon" href="favicon.ico">
     </head>
     <body>
         <header class="header">
