--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -1,6 +1,5 @@
 <!-- TODO:１つ１つの要素について理解する必要がある。このページに不要なものが他にもいくつかあるように思う。また、パスワードは必須である必要性はあるのか？ @shin -->
 <!-- TODO:コンソールエラーの解消 @shin -->
-<!-- TODO:全ページのfaviconの設定 @shin -->
 <!DOCTYPE html>
 <html lang="zh-TW">
 
@@ -10,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A++ my info</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body id="pagetop">
