--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500&family=Shippori+Antique+B1&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body class="lower-index" id="pagetop">
