--- a/mypage/editresume.html
+++ b/mypage/editresume.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A++ my resume</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body id="pagetop">
