--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-
+<!-- TODO: わかる範囲でリンクをはる @shin -->
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -1304,6 +1304,7 @@
     </div>
     <!-- // Banner -->
 
+    <!-- TODO: job_card.htmlにジョブカードのHTMLを移動 @shin -->
     <!-- Works -->
     <div class="works c-layout-col2">
         <div class="c-layout-col2__main">
