--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -1,4 +1,5 @@
 <!-- TODO:１つ１つの要素について理解する必要がある。このページに不要なものが他にもいくつかあるように思う。また、パスワードは必須である必要性はあるのか？ @shin -->
+<!-- TODO:すでにログイン済みのページでログインへの誘導リンクはいらない @shin -->
 <!DOCTYPE html>
 <html lang="zh-TW">
 
@@ -76,6 +77,8 @@
                     </tr>
                 </table>
                 <div class="submit-button">
+                    <!-- TODO: 変更の中国語記述に修正 @shin -->
+                    <!-- TODO: 修改はプレビューページのボタンとしておく @shin -->
                     <button type="submit">修改</button>
                 </div>
                 <div class="backtologin">
