--- a/mypage/editresume.html
+++ b/mypage/editresume.html
@@ -141,6 +141,7 @@
                     </div>
                 </div>
                 <div class="info-submit">
+                    <!-- TODO: した２つ共にリンク切れ @shin -->
                     <button type="submit" name=""><a href="../step3.html">送出</a></button>
                     <button type="button" class="backtoprevious"><a href="../step1.html">上一頁</a></button>
                 </div>
